[package]
name = "web-scrapper-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"

tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] } # Serialization
serde_json = "1.0"     # JSON handling
tower-http = { version = "0.5", features = ["cors"] } # Middleware
tracing = "0.1"        # Logging
tracing-subscriber = "0.3"  # Logging setup
mongodb = "2.0"
bson = "2.0"
